--- a/styles.css
+++ b/styles.css
@@ -26,11 +26,71 @@ button {
 }
 
 .addItemHeader h5 {
-  padding-left: 50px;
-}
+  padding-left: 100px;
+} 
+
 
 .addItem {
   display: flex;
-  flex-flow: wrap;
+  flex-flow: nowrap;
   align-items: center;
+}
+
+select {
+  width: 250px;
+  padding: 5px 10px;
+  margin: 5px 2px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 5px; 
+}
+
+input#description {
+  width: 70%;
+  padding: 5px 10px;
+  margin: 5px 2px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 5px; 
+}
+
+input#qyt, input#unitPrice, input#amount {
+  width: 5%;
+  padding: 5px 10px;
+  margin: 5px 2px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 5px; 
+}
+
+button#submit {
+  background-color: #4CAF50;
+  color: white;
+  padding: 5px 15px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 50px;
+}
+
+button#submit:hover {
+  background-color: #45a049;
+}
+
+button#addRow, #addCustomer {
+  background-color: #616060;
+  color: white;
+  padding: 5px 15px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 50px;
+}
+
+button#addRow:hover, #addCustomer:hover {
+  background-color: #767676;
+}
+
+input:focus {
+    outline: none;
+    border: 4px solid red;
+    box-shadow: 0 0 3px #8a8a8a;
 }
