--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,22 @@ button#addRow:hover, #addCustomer:hover {
   background-color: #767676;
 }
 
+button.removeRow {
+  background-color: #db6363;
+  color: white;
+  padding: 5px 15px;
+  margin: 8px 0;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  text-align: left;
+  display: inline-block;
+  width:  40px;
+}
+
+button.removeRow:hover {
+  background-color: #e85e5e;
+}
+
 input:focus {
     outline: none;
     border: 4px solid red;
